--- a/Day2-Triangle.html
+++ b/Day2-Triangle.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <script id="vertexShaderSource" type="x-shader/x-vertex">
 // type에는 text/javascript가 아닌 임의의 값을 주면 됨.
-// script로 해석되지 않고 무시되도록 하는 것이 목적
+//     javascript로 해석되지 않도록 하는 것이 목적
 
 attribute vec3 aVertexPosition;
 // attribute : 셰이더 변수 종류(attribute | uniform | varying)
@@ -14,8 +14,8 @@ attribute vec3 aVertexPosition;
 
 void main() {
 // 버텍스 하나 마다 실행되는 버텍스 셰이더 실행부
-//     버퍼에 있는 배열 데이터는 gl.vertexAttribPointer()의 파라미터에 있는 정보를 기준으로 여러개의 버텍스로 분리되고,
-//     여러 개의 코어에서 이 main() 함수가 각기 다른 버텍스 정보를 기준으로 동시에 병렬 실행된다.
+//     버퍼에 있는 배열 데이터는 gl.vertexAttribPointer()의 파라미터에 있는 정보를 기준으로 여러 개의 버텍스로 분리되고,
+//     여러 개의 버텍스는 여러 개의 코어에서 이 main() 함수에 의해 한 번에 병렬 처리된다.
 
     gl_Position = vec4(aVertexPosition, 1.0);
     // vec4() : 네 개의 원소를 파라미터로 받아서 4행 벡터를 반환하는 함수
@@ -23,14 +23,14 @@ void main() {
     // 1.0 : 버텍스는 점 이므로 1.0(동차좌표계 내용 참고)
     // gl_Position : 버텍스 셰이더의 내장 변수. 동차좌표계를 사용하므로 vec4 타입만 받는다.
     // 별도의 return 문 없이도 gl_Position에 할당된 값이
-    //     파이프라인 상에서 버텍스셰이더의 다음 단계(primitive 조립)의 입력값으로 전달된다.
+    //     파이프라인 상에서 버텍스 셰이더의 다음 단계(primitive 조립)의 입력값으로 전달된다.
     // 이 예제에서는 단순히 버텍스 하나를 그대로 gl_Position에 할당할 뿐이지만,
     //     일반적인 경우 버텍스에 여러가지 변환 연산을 적용한 후에 gl_Position에 값을 할당한다.
 }
 </script>
 <script id="fragmentShaderSource" type="x-shader/x-fragment">
 // type에는 text/javascript가 아닌 임의의 값을 주면 됨.
-// script로 해석되지 않고 무시되도록 하는 것이 목적
+//     javascript로 해석되지 않도록 하는 것이 목적
 
 precision mediump float;
 // precision : 데이터의 정밀도 지정
@@ -39,9 +39,9 @@ precision mediump float;
 
 void main() {
 // 프래그먼트 하나마다 실행되는 프래그먼트 셰이더 실행부
-//     프래그먼트 셰이더는 파이프라인 상에서 래스터라이징의 바로 다음단계에 있으며,
+//     프래그먼트 셰이더는 파이프라인 상에서 래스터라이징의 바로 다음 단계에 있으며,
 //     래스터라이징의 결과물인 프래그먼트 하나하나마다 이 main() 함수가 실행되는데,
-//     여러 개의 코어에서 이 main() 함수가 각기 다른 프래그먼트 정보를 기준으로 동시에 병렬 실행된다.
+//     여러 개의 코어에서 이 main() 함수가 각기 다른 프래그먼트 정보를 기준으로 한 번에 병렬 실행된다.
 
     gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
     // 1.0, 1.0, 1.0, 1.0 : r, g, b, a 값
@@ -80,7 +80,7 @@ function createGLContext(canvas) {
     var context;
 
     for (var i = 0, l = glNames.length; i < l ; i++) {
-        // canvas.getContext() 실행 중 에러가 나더라도
+        // try 문은 canvas.getContext() 실행 중 에러가 나더라도
         // 스크립트 실행이 정지되지 않고 glNames의 다음 요소로 다시 시도하게 한다.
         try {
             context = canvas.getContext(glNames[i]);
@@ -105,6 +105,7 @@ function createGLContext(canvas) {
  * @gl WebGL 컨텍스트. 'gl.~~~()는 버스를 통해 GPU에게 무언가를 시키는 것이다.'라고 해석하자.
  */
 function setupShaders(gl) {
+    // 버텍스 셰이더 소스를 문자열로 담아온다.
     var vertexShaderSource = document.getElementById('vertexShaderSource').text;
 
     // 버텍스 셰이더를 담을 그릇을 GPU한테 받아온다.
@@ -124,6 +125,7 @@ function setupShaders(gl) {
         return null;
     }
 
+    // 위의 버텍스 셰이더와 똑같은 과정
     var fragmentShaderSource = document.getElementById('fragmentShaderSource').text;
     var fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
     gl.shaderSource(fragmentShader, fragmentShaderSource);
@@ -137,7 +139,7 @@ function setupShaders(gl) {
     // 셰이더 프로그램을 담을 그릇을 GPU한테 얻어온다.
     var shaderProgram = gl.createProgram();
 
-    // 그릇에 컴파일 된 두 셰이더를 담는다.
+    // 셰이더 프로그램 그릇에 컴파일 된 두 셰이더를 담는다.
     gl.attachShader(shaderProgram, vertexShader);
     gl.attachShader(shaderProgram, fragmentShader);
 
@@ -187,6 +189,7 @@ function setupBuffers(gl) {
 
     // GPU 메모리 내에 있는 gl.ARRAY_BUFFER라는 key에 바인딩 되어 있는 버퍼(vertexBuffer)에
     //     삼각형 정보를 담도록 GPU에게 시킨다.
+    // https://github.com/projectBS/S63-WebGL/blob/master/Day2-20150908.md#glcreatebuffer-glbindbuffer-glbufferdata 참고
     gl.bufferData(gl.ARRAY_BUFFER, typedArray, gl.STATIC_DRAW);
 
     // 버텍스 하나의 위치를 나타내는 정보의 개수(1 ~ 4의 값 가능. 2D context라면 2를 쓴다. 여기서는 x, y, z를 사용하므로 3)
@@ -230,7 +233,7 @@ function draw(gl, shaderProgram, vertexBuffer) {
     // GPU에게 viewport 범위를 지정된 색으로 싹 칠하도록 시킨다.
     gl.clear(gl.COLOR_BUFFER_BIT);
 
-    // shaderProgram 내에서 aVertexPosition에 접근할 수 있는 위치값(포인터)를 GPU한테 시켜서 받아온다.
+    // shaderProgram 내에서 aVertexPosition에 접근할 수 있는 위치값(포인터)을 GPU한테 시켜서 받아온다.
     var indexOfVertexPositionAttrubite = gl.getAttribLocation(shaderProgram, "aVertexPosition");
 
     // aVertexPosition의 위치값을 이용해서 aVertexPosition에
@@ -254,7 +257,8 @@ function draw(gl, shaderProgram, vertexBuffer) {
     );
 
     // 파라미터로 지정된 위치에 있는 attribute 변수를 활성화 한다.
-    //     안 쓸 때는 disableVertexAttribArray(index)를 해준다.
+    // 활성화의 의미는 그릴 때 이 attribute 변수의 내용을 사용하도록 한다는 의미
+    // 안 쓸 때는 disableVertexAttribArray(index)를 해준다.
     gl.enableVertexAttribArray(
         indexOfVertexPositionAttrubite  // index : enable할 attribute 변수의 위치값
     );
@@ -262,6 +266,8 @@ function draw(gl, shaderProgram, vertexBuffer) {
     // GPU에게 최종적으로 그리기를 시킨다.
     gl.drawArrays(
         gl.TRIANGLES, // mode : 그리는 방법을 지정. 정확하게는 버퍼 데이터로 생성할 primitive를 지정
+                      //        파이프라인 상에서 버텍스 셰이더의 다음 단계인 Primitive 조립 에서
+                      //        이 mode 값에 지정된 방식대로 Primitive를 조립한다.
         0,            // first : 그리기에 사용할 첫번째 버텍스의 위치(0이 아니면 안되던데..)
         vertexBuffer.numOfVertices  // count : 버텍스의 갯수
     );
